--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 		<title>FF - Pocetna</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		
+		<link rel="stylesheet" href="../css/styles.css" type="text/css">
 		
 	</head>
 	
@@ -29,7 +29,7 @@
 			<div class="col-4 col-lg-2">
 				<img src="../images/logo.jpg" alt="LOGO" width="80%" style="padding:10%;">
 			</div>
-			<div class="col-8 col-lg-10" style="padding-top:10%;">
+			<div class="col-8 col-lg-10">
 				<br>
 				<h1 style="color:white;">Filmski festival</h1>
 				<h1 style="color:white;" >6.5-10.5</h1>
@@ -52,14 +52,14 @@
 			<div class="collapse navbar-collapse navbar-center" id="collapsibleNavbar">
 				<ul class="navbar-nav mx-auto">
 					<li class="nav-item active">
-						<a class="nav-link" href="index.html">Pocetna</a>
+						<a class="nav-link" href="index.html" ><h3>Pocetna</h3></a>
 					</li>
 					
 					<li class="nav-item">
-						<a class="nav-link" href="ofestivalu.html">O festivalu</a>
+						<a class="nav-link" href="ofestivalu.html"><h3>O festivalu</h3></a>
 					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" id="program-dd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="program.html">Program</a>
+						<a class="nav-link dropdown-toggle" id="program-dd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="program.html"><h3>Program</h3></a>
 						<div class="dropdown-menu" aria-labelledby="program-dd">
 							 <a class="dropdown-item" href="prvidan.html">1. Dan</a>
 							 <a class="dropdown-item" href="drugidan.html">2. Dan</a>
@@ -67,10 +67,10 @@
 						</div>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="glumci.html">Glumci</a>
+						<a class="nav-link" href="glumci.html"><h3>Glumci</h3></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="vesti.html">Vesti</a>
+						<a class="nav-link" href="vesti.html"><h3>Vesti</h3></a>
 					</li>
 				</ul>
 			</div> 
