--- a/html/index.html
+++ b/html/index.html
@@ -15,19 +15,15 @@
 	</head>
 	
 	<body >
-		<div class="row" style="background-image: url('../images/header.jpg');background-size:cover;width:100%;margin:0px;">
+		<div class="row" style="background-image: url('../images/back2.jpg');background-size:cover;width:100%;margin:0px;">
 			<div class="col-lg-12">
 				<div class="float-right" style="padding:1%;">
-					<button style="margin:0px;padding:0px;">
-						<img src="../images/srb.png" width="50px" height="30px;">
-					</button>
-					<button style="margin:0px;padding:0px;" onClick="change();">
-						<img src="../images/eng.png" width="50px" height="30px;"  >
-					</button>
+						<a href="index.html"><img src="../images/srb.png" width="50px" height="30px;"></a>
+						<a href="index_eng.html"><img src="../images/eng.png" width="50px" height="30px;"  ></a>
 				</div>
 			</div>
 			<div class="col-4 col-lg-2">
-				<img src="../images/logo.jpg" alt="LOGO" width="80%" style="padding:10%;">
+				<img src="../images/festival-logo.png" alt="LOGO" width="100%" style="padding:10%;">
 			</div>
 			<div class="col-8 col-lg-10">
 				<br>
@@ -39,9 +35,9 @@
 			
 			
 		</div>
-		<nav class="navbar navbar-expand-md  navbar-dark" style="background-color: #626262;">
+		<nav class="stroke navbar navbar-expand-md navbar-dark" style="background-image: url('../images/pattern.png');" >
 			<!-- logo -->
-			<a class="navbar-brand" href="home.html"><img src="../images/logo.jpg" alt="LOGO" style="width:70px;"></a>
+			<a class="navbar-brand" href="home.html"><img src="../images/festival-logo.png" alt="LOGO" style="width:70px;"></a>
 			
 			<!-- kada se smanji prozor da se pojavi collapse button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
