--- a/html/glumac1.html
+++ b/html/glumac1.html
@@ -35,13 +35,15 @@
 				<h1 style="color:white;" >6.5-10.5</h1>
 			</div>
 			
+		</div>
+			
 			
 			
 			
 		</div>
-		<nav class="navbar navbar-expand-md  navbar-dark" style="background-color: #626262;">
+		<nav class="stroke navbar navbar-expand-md navbar-dark" style="background-image: url('../images/pattern.png');" >
 			<!-- logo -->
-			<a class="navbar-brand" href="home.html"><img src="../images/logo.jpg" alt="LOGO" style="width:70px;"></a>
+			<a class="navbar-brand" href="home.html"><img src="../images/festival-logo.png" alt="LOGO" style="width:70px;"></a>
 			
 			<!-- kada se smanji prozor da se pojavi collapse button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
