--- a/html/ofestivalu.html
+++ b/html/ofestivalu.html
@@ -7,25 +7,22 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="../css/styles.css" type="text/css">
 		
-		<div class="row" style="background-image: url('../images/header.jpg');background-size:cover;margin:0px;">
+		<div class="row" style="background-image: url('../images/back2.jpg');background-size:cover;width:100%;margin:0px;">
 			<div class="col-lg-12">
 				<div class="float-right" style="padding:1%;">
-					<button style="margin:0px;padding:0px;">
-						<img src="../images/srb.png" width="50px" height="30px;" />
-					</button>
-					<button style="margin:0px;padding:0px;">
-						<img src="../images/eng.png" width="50px" height="30px;" />
-					</button>
+						<a href="index.html"><img src="../images/srb.png" width="50px" height="30px;"></a>
+						<a href="index_eng.html"><img src="../images/eng.png" width="50px" height="30px;"  ></a>
 				</div>
 			</div>
 			<div class="col-4 col-lg-2">
-				<img src="../images/logo.jpg" alt="LOGO" width="80%" style="padding:10%;">
+				<img src="../images/festival-logo.png" alt="LOGO" width="100%" style="padding:10%;">
 			</div>
 			<div class="col-8 col-lg-10">
 				<br>
-				<h1 style="color:white;">Filmski festival</h1>
+				<h1 style="color:white;">Film festival</h1>
 				<h1 style="color:white;" >6.5-10.5</h1>
-			</div>
+			</div>			
+		</div>
 			
 			
 			
@@ -35,9 +32,9 @@
 	
 	<body >
 		
-		<nav class="navbar navbar-expand-md  navbar-dark" style="background-color: #626262; margin:0px;">
+		<nav class="stroke navbar navbar-expand-md navbar-dark" style="background-image: url('../images/pattern.png');" >
 			<!-- logo -->
-			<a class="navbar-brand" href="home.html"><img src="../images/logo.jpg" alt="LOGO" style="width:70px;"></a>
+			<a class="navbar-brand" href="home.html"><img src="../images/festival-logo.png" alt="LOGO" style="width:70px;"></a>
 			
 			<!-- kada se smanji prozor da se pojavi collapse button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -48,7 +45,7 @@
 			<div class="collapse navbar-collapse navbar-center" id="collapsibleNavbar">
 				<ul class="navbar-nav mx-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="index.html"><h3>Pocetna</h3></a>
+						<a class="nav-link" href="index.html" ><h3>Pocetna</h3></a>
 					</li>
 					
 					<li class="nav-item active">
