--- a/html/glumac1.html
+++ b/html/glumac1.html
@@ -43,7 +43,7 @@
 		</div>
 		<nav class="stroke navbar navbar-expand-md navbar-dark" style="background-image: url('../images/pattern.png');" >
 			<!-- logo -->
-			<a class="navbar-brand" href="home.html"><img src="../images/festival-logo.png" alt="LOGO" style="width:70px;"></a>
+			<a class="navbar-brand" href="index.html"><img src="../images/festival-logo.png" alt="LOGO" style="width:70px;"></a>
 			
 			<!-- kada se smanji prozor da se pojavi collapse button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
