Dodat header na glumci.html + izmena social ikonica

--- a/html/glumci.html
+++ b/html/glumci.html
@@ -73,7 +73,7 @@
 		<div class="container" style="padding-top:20px;">
 			<div class="row">
 				<div class="col-12">
-					<center><h4>Glumci</h4></center>
+					<!-- <center><h4>Glumci</h4></center> -->
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-12 actor-card">
 					<div class="card">
@@ -166,7 +166,7 @@
 				<div class="row" style="margin:0px;padding:10px;">
 					
 					<div class="col-4">
-							<a href="https://sr-rs.facebook.com/">
+							<a href="https://sr-rs.facebook.com/" class="social-links">
 								<img src="../images/fb.png" width="20%;" />
 							</a>
 							<a href="https://sr-rs.facebook.com/">
