--- a/html/glumac1.html
+++ b/html/glumac1.html
@@ -15,26 +15,21 @@
 	</head>
 	
 	<body >
-		<div class="row" style="background-image: url('../images/header.jpg');background-size:cover;width:100%;margin:0px;">
+		<div class="row" style="background-image: url('../images/back2.jpg');background-size:cover;width:100%;margin:0px;">
 			<div class="col-lg-12">
 				<div class="float-right" style="padding:1%;">
-					<button style="margin:0px;padding:0px;">
-						<img src="../images/srb.png" width="50px" height="30px;">
-					</button>
-					<button style="margin:0px;padding:0px;" onClick="change();">
-						<img src="../images/eng.png" width="50px" height="30px;"  >
-					</button>
+						<a href="index.html"><img src="../images/srb.png" width="50px" height="30px;"></a>
+						<a href="index_eng.html"><img src="../images/eng.png" width="50px" height="30px;"  ></a>
 				</div>
 			</div>
 			<div class="col-4 col-lg-2">
-				<img src="../images/logo.jpg" alt="LOGO" width="80%" style="padding:10%;">
+				<img src="../images/festival-logo.png" alt="LOGO" width="100%" style="padding:10%;">
 			</div>
 			<div class="col-8 col-lg-10">
 				<br>
-				<h1 style="color:white;">Filmski festival</h1>
+				<h1 style="color:white;">Film festival</h1>
 				<h1 style="color:white;" >6.5-10.5</h1>
-			</div>
-			
+			</div>			
 		</div>
 			
 			
