--- a/html/index.html
+++ b/html/index.html
@@ -57,6 +57,7 @@
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" id="program-dd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="program.html"><h3>Program</h3></a>
 						<div class="dropdown-menu" aria-labelledby="program-dd">
+							 <a class="dropdown-item" href="filmovi.html">Filmovi</a>
 							 <a class="dropdown-item" href="prvidan.html">1. Dan</a>
 							 <a class="dropdown-item" href="drugidan.html">2. Dan</a>
 							 <a class="dropdown-item" href="trecidan.html">3. Dan</a>
