--- a/html/3.1 glumac1.html
+++ b/html/3.1 glumac1.html
@@ -120,20 +120,27 @@
 			<footer>
 				<div class="row" style="margin:0px;padding:10px;">
 					
-					<div class="col-4">
-							<a href="https://sr-rs.facebook.com/">
-								<img src="../images/fb.png" width="20%;" />
-							</a>
-							<a href="https://sr-rs.facebook.com/">
-								<img src="../images/yt.png" width="20%;" />
-							</a>
-							<a href="https://sr-rs.facebook.com/">
-								<img src="../images/ig.png" width="20%;" />
-							</a>
-							<a href="https://sr-rs.facebook.com/">
-								<img src="../images/twitter.png" width="20%;" />
-							</a>
-					</div>
+					<div class="col-4" style="padding:10px">
+						<a href="https://sr-rs.facebook.com/">
+							<img src="../images/social-icons/fb-icon.png" style="max-width: 8%;min-width:25px;"/>
+						</a>
+						&nbsp;
+						<a href="https://www.youtube.com/">
+							<img src="../images/social-icons/yt-icon.png" style="max-width: 8%;min-width:25px;" />
+						</a>
+						&nbsp;
+						<a href="https://www.instagram.com/">
+							<img src="../images/social-icons/ig-icon.png" style="max-width: 8%;min-width:25px;" />
+						</a>
+						&nbsp;
+						<a href="https://www.twitter.com/">
+							<img src="../images/social-icons/tw-icon.png" style="max-width: 8%;min-width:25px;" />
+						</a>
+						&nbsp;
+						<a href="mailto:hm150112d@student.etf.bg.ac.rs?Subject=film%20fest">
+							<img src="../images/social-icons/em-icon.png" style="max-width: 8%;min-width:25px;" />
+						</a>
+				</div>
 					<div class="col-8">
 						<br>
 						<i>
