--- a/html/2.1 filmovi.html
+++ b/html/2.1 filmovi.html
@@ -89,12 +89,13 @@
 		
 		<div class="container" style="padding-top:20px;">
 			<div class="row">
-				<div class="col-lg-12">
+				<div class="col-12">
 						<br>
 						<h1>Filmski program</h1>
 						<hr>
 						<br>
-
+				</div>
+				<div class="col-12 col-md-6">
 						<!--CARD 2.1-->
 					    <div class="example-2 card">
 					      <div class="wrapper"  style="background-image: url('../images/filmovi/film1.jpg');background-repeat:no-repeat; background-size:cover;background-position:center">
@@ -103,11 +104,7 @@
 					            <span>Trajanje: 122’ </span>
 					          </div>
 					          <ul class="menu-content">
-					            <li>
-					              <a href="#" class="fa fa-bookmark-o"></a>
-					            </li>
-					            <li><a href="#" class="fa fa-heart-o"><span>1</span></a></li>
-					            <li><a href="#" class="fa fa-comment-o"><span>1</span></a></li>
+					            <li><a href="#" class="fa fa-heart-o"></a></li>
 					          </ul>
 					        </div>
 					        <div class="data">
@@ -120,6 +117,8 @@
 					        </div>
 					      </div>
 					    </div>
+				</div>
+				<div class="col-12 col-md-6">
 					    <!--CARD 2.2-->
 					    <div class="example-2 card">
 					      <div class="wrapper"  style="background-image: url('../images/filmovi/film2.jpg');background-repeat:no-repeat; background-size:cover;background-position:center">
@@ -128,11 +127,7 @@
 					            <span>Trajanje: 104’ </span>
 					          </div>
 					          <ul class="menu-content">
-					            <li>
-					              <a href="#" class="fa fa-bookmark-o"></a>
-					            </li>
-					            <li><a href="#" class="fa fa-heart-o"><span>1</span></a></li>
-					            <li><a href="#" class="fa fa-comment-o"><span>1</span></a></li>
+					            <li><a href="#" class="fa fa-heart-o"></a></li>
 					          </ul>
 					        </div>
 					        <div class="data">
@@ -145,6 +140,8 @@
 					        </div>
 					      </div>
 					    </div>
+				</div>
+				<div class="col-12 col-md-6">
 					    <!--CARD 2.3-->
 					    <div class="example-2 card">
 					      <div class="wrapper"  style="background-image: url('../images/filmovi/film3.jpg');background-repeat:no-repeat; background-size:cover;background-position:center">
@@ -153,11 +150,7 @@
 					            <span>Trajanje: 107’ </span>
 					           </div>
 					          <ul class="menu-content">
-					            <li>
-					              <a href="#" class="fa fa-bookmark-o"></a>
-					            </li>
-					            <li><a href="#" class="fa fa-heart-o"><span>1</span></a></li>
-					            <li><a href="#" class="fa fa-comment-o"><span>1</span></a></li>
+					            <li><a href="#" class="fa fa-heart-o"></a></li>
 					          </ul>
 					        </div>
 					        <div class="data">
@@ -170,7 +163,9 @@
 					        </div>
 					      </div>
 					    </div>
+				</div>
 					     <!--CARD 2.4-->
+				<div class="col-12 col-md-6">
 					    <div class="example-2 card">
 					      <div class="wrapper"  style="background-image: url('../images/filmovi/film4.jpg');background-repeat:no-repeat; background-size:cover;background-position:center">
 					        <div class="header">
@@ -178,11 +173,7 @@
 					            <span>Trajanje: 104’ </span>
 					          </div>
 					          <ul class="menu-content">
-					            <li>
-					              <a href="#" class="fa fa-bookmark-o"></a>
-					            </li>
-					            <li><a href="#" class="fa fa-heart-o"><span>1</span></a></li>
-					            <li><a href="#" class="fa fa-comment-o"><span>1</span></a></li>
+					            <li><a href="#" class="fa fa-heart-o"></a></li>
 					          </ul>
 					        </div>
 					        <div class="data">
@@ -195,6 +186,7 @@
 					        </div>
 					      </div>
 					    </div>
+				</div>
 		
 				</div>
 			</div>
@@ -211,23 +203,23 @@
 				
 				<div class="col-4" style="padding:10px">
 						<a href="https://sr-rs.facebook.com/">
-							<img src="../images/social-icons/fb-icon.png" width="8%;" />
+							<img src="../images/social-icons/fb-icon.png" style="max-width: 8%;min-width:25px;"/>
 						</a>
 						&nbsp;
 						<a href="https://www.youtube.com/">
-							<img src="../images/social-icons/yt-icon.png" width="8%;" />
+							<img src="../images/social-icons/yt-icon.png" style="max-width: 8%;min-width:25px;" />
 						</a>
 						&nbsp;
 						<a href="https://www.instagram.com/">
-							<img src="../images/social-icons/ig-icon.png" width="8%;" />
+							<img src="../images/social-icons/ig-icon.png" style="max-width: 8%;min-width:25px;" />
 						</a>
 						&nbsp;
 						<a href="https://www.twitter.com/">
-							<img src="../images/social-icons/tw-icon.png" width="8%;" />
+							<img src="../images/social-icons/tw-icon.png" style="max-width: 8%;min-width:25px;" />
 						</a>
 						&nbsp;
 						<a href="mailto:hm150112d@student.etf.bg.ac.rs?Subject=film%20fest">
-							<img src="../images/social-icons/em-icon.png" width="8%;" />
+							<img src="../images/social-icons/em-icon.png" style="max-width: 8%;min-width:25px;" />
 						</a>
 				</div>
 				<div class="col-8" align="right" style="padding:5px">
