mala ispravka kod glumca1

--- a/html/3.1 glumac.html
+++ b/html/3.1 glumac.html
@@ -38,7 +38,6 @@
 				
 				
 		<!--Navbar-->		
-			</div>
 			<nav class="stroke navbar navbar-expand-md navbar-dark" style="background-image: url('../images/pattern.png');" >
 				<!-- logo -->
 				<a class="navbar-brand ml-4" href="index.html"><img src="../images/circle-logo.png" alt="LOGO" style="width:50px;"></a>
@@ -100,7 +99,7 @@
 					<div class="media actor-media">
 						<div class="col-3 col-lg-6">
 						<div class="media-left">
-							<img class="imt-top" src="../images/glumci/glumac1.jpg">
+							<img class="alone-actor-img rounded-circle" src="../images/glumci/glumac1.jpg">
 						</div>
 						</div>
 						<div class="col-9 col-lg-6">
