--- a/html/4 vesti.html
+++ b/html/4 vesti.html
@@ -4,7 +4,7 @@
 		
 		<title>FF - Vesti</title>
 		<link rel="icon" href="../images/circle-logo.png">
-		
+
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="../css/styles.css" type="text/css">
@@ -102,7 +102,7 @@
 					        </div>
 					        <div class="timeline-body">
 					          <p>
-								Glavni takmičarski program 46. film fest-a čini 16 ostvarenja iz Mađarske, Danske, Irana, Kine, Argentine, Libana, Grčke, Hrvatske, SAD, Rusije, Italije i Švajcarske.
+								Glavni takmičarski program prvog film fest-a čini 16 ostvarenja iz Mađarske, Danske, Irana, Kine, Argentine, Libana, Grčke, Hrvatske, SAD, Rusije, Italije i Švajcarske.
 							  </p>
 							  <p>
 							  	<a href="1.1 ziri.html">Vise o ovome</a>
