--- a/html/1.4 kontakt.html
+++ b/html/1.4 kontakt.html
@@ -86,6 +86,14 @@
 
 		<div class="container" style="padding-top:20px;">
 			<div class="row">
+				<div class="col-12">
+					<ul class="breadcrumb">
+						<li class="breadcrumb-item"><a class="breadcrumb-link">O festivalu</a></li>
+						<li class="breadcrumb-item active">Kontakt</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
 				<div class="col-md-8">					
 					<div id="map"style="width:100%;height:700px;"></div>
 					<script>
