breadcrumb active dodao

--- a/html/2.2 mesta_projekcija.html
+++ b/html/2.2 mesta_projekcija.html
@@ -89,7 +89,7 @@
 				<div class="col-12">
 					<ul class="breadcrumb">
 						<li class="breadcrumb-item">Program</li>
-						<li class="breadcrumb-item">Mesta projekcija<li>
+						<li class="breadcrumb-item active">Mesta projekcija<li>
 						
 					</ul>
 				</div>
