--- a/html/2.3 prodajna_mesta.html
+++ b/html/2.3 prodajna_mesta.html
@@ -89,7 +89,7 @@
 				<div class="col-12">
 					<ul class="breadcrumb">
 						<li class="breadcrumb-item">Program</li>
-						<li class="breadcrumb-item">Prodajna mesta<li>
+						<li class="breadcrumb-item active">Prodajna mesta<li>
 						
 					</ul>
 				</div>
