Film+sitne izmene
Za film sam dodao ono sto treba, vidi mislim da je ok, jedino ona tabela mada ni ona nije losa...
Font je sada svugde dinamicki, treba videti za nagrade

--- a/html/1.3 sponzori.html
+++ b/html/1.3 sponzori.html
@@ -225,7 +225,7 @@
 						</a>
 				</div>
 				<div class="col-8" align="right" style="padding:5px">
-					<i>
+					<i class="footer-font-resp">
 						&copy; Copyright 2018.<br>
 						Jakov Jezdic i Marko Hudomal, Odsek za Softversko inzenjerstvo Elektrotehnickog fakulteta univerziteta u Beogradu
 					<i>
