--- a/html/3.1 glumac.html
+++ b/html/3.1 glumac.html
@@ -150,7 +150,7 @@
 				</div>
 					<div class="col-8">
 						<br>
-						<i>
+						<i style="font-size:calc(12px + 0.3vw);">
 							&copy; Copyright 2018.<br>
 							Jakov Jezdic i Marko Hudomal, Odsek za Softversko inzenjerstvo Elektrotehnickog fakulteta univerziteta u Beogradu
 						<i>
