--- a/html/3.5 glumac.html
+++ b/html/3.5 glumac.html
@@ -108,7 +108,7 @@
 							<div class="media-text">
 								<center>
 								
-									<p class="paragraph">
+									<p class="paragraph actor-p">
 										<strong>Ser Danijel Dej-Luis</strong>
 										  (engl. Ser Daniel Day-Lewis; 29. april 1957) englesko-irski je glumac.
 									</p>
@@ -155,7 +155,7 @@
 				</div>
 					<div class="col-8">
 						<br>
-						<i>
+						<i class="footer-font-resp">
 							&copy; Copyright 2018.<br>
 							Jakov Jezdic i Marko Hudomal, Odsek za Softversko inzenjerstvo Elektrotehnickog fakulteta univerziteta u Beogradu
 						<i>
