--- a/html/4 vesti.html
+++ b/html/4 vesti.html
@@ -101,7 +101,7 @@
 					          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 25. maj 2018</small></p>
 					        </div>
 					        <div class="timeline-body">
-					          <p>
+					          <p style="font-size:calc(12px + 0.3vw);">
 								Glavni takmičarski program prvog film fest-a čini 16 ostvarenja iz Mađarske, Danske, Irana, Kine, Argentine, Libana, Grčke, Hrvatske, SAD, Rusije, Italije i Švajcarske.
 							  </p>
 							  <p>
@@ -118,11 +118,15 @@
 					          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 18. maj 2018</small></p>
 					        </div>
 					        <div class="timeline-body">
-					         	<p>
+					         	<p style="font-size:calc(12px + 0.3vw);">
 					          		Karte za festival biće puštene u prodaju u subotu, 19. maja. Karte za projekcije u Sava centru i Domu omladine, sem na blagajnama tih dvorana, mogu se nabaviti i online putem Eventima, kao i na svim Eventim prodajnim mestima (preko Eventima pojedinačne karte za SC su skuplje za 40 din). Karte za ostale projekcije kupuju se na blagajnama sala. Pored dobro poznatih dvorana, od ove godine se filmovi prikazuju i u novom bioskopu Cine Grand Rakovica.
 					          	</p>
-					          	<p>
+								
+					          	<p style="font-size:calc(12px + 0.3vw);">
 									Prvih sedam dana prodaje odobrava se 10% popusta na komplete karata po terminskim linijama.
+								</p>
+								<p>
+									<a href="prodajna_mesta.html">Prodajna mesta</a>
 								</p>
 					        </div>
 					      </div>
@@ -135,13 +139,13 @@
 					          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 18. maj 2018</small></p>
 					        </div>
 					        <div class="timeline-body">
-					         	<p>
+					         	<p style="font-size:calc(12px + 0.3vw);">
 					         		Najveće interesovanje očekivano je za Svečano otvaranje i film <strong>Tri Bilborda ispred Ebinga u Misuriju</strong>. Ovo ostvarenje nominovano za sedam Oskara sa Franses Mekdormand u glavnoj ulozi sasvim sigurno će biti jedan od filmova o kome će se najviše govoriti na ovogodišnjem film fest-u.
 					          	</p>
-					          	<p>
+					          	<p style="font-size:calc(12px + 0.3vw);">
 									Zlatnom palmom ovenčan film <strong>Skver (The Square)</strong> švedskog reditelja Rubena Estlunda takođe je jedan od favorita beogradske publike, kao i poetična ljubavna priča Luke Gvadanjina <strong>Skrivena ljubav (Call me by your name)</strong>.
 								</p>
-								<p>
+								<p style="font-size:calc(12px + 0.3vw);">
 									<strong>Oblik vode (Shape of water)</strong>, Venecijanski pobednik i lider u nominacijama za Oskara (čak 13) sasvim opravdano se našao na listi najtraženijih, a vizuelna raskoš kojom ovaj film Giljerma del Tora odiše je samo jedan od razloga zašto ga vredi pogledati upravo na velikom platnu Sava centra.
 								</p>
 					        </div>
@@ -155,10 +159,10 @@
 					          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 17. maj 2018</small></p>
 					        </div>
 					        <div class="timeline-body">
-					          	<p>
+					          	<p style="font-size:calc(12px + 0.3vw);">
 					          		Mađarski filmski i pozorišni reditelj, Kornel Mundruco, biće gost 46. FEST-a sa svojim novim ostvarenjem "Jupiterov mesec". Domaća publika već je upoznata sa radom ovog stvaraoca čiji je prethodni film, "Beli bog", prikazan na 43. FEST-u, a Mundruco je takođe bio gost Bitef-a sa svojim pozorišnim predstavama.
 					          	</p>
-					          	<p>
+					          	<p style="font-size:calc(12px + 0.3vw);">
 									Ovo je sedmi dugometražni film mladog reditelja, svojevrsnog miljenika festivala u Kanu gde je prikazano njegovih poslednjih pet ostvarenja. Mundruco je za film "Beli bog" osvojio Gran pri u selekciji "Izvestan pogled", a "Jupiterov mesec" je prošle godine bio u takmičarskom programu Kanskog festivala.
 								</p>
 					        </div>
@@ -172,13 +176,13 @@
 					          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 12. maj 2018</small></p>
 					        </div>
 					        <div class="timeline-body">
-					          		<p>Danas je u Skupštini grada održana prva pres konferencija povodom predstojećeg, 46. FEST-a na kojoj su govorili Ivona Jevtić, Nataša Ilić, Jugoslav Pantelić, Mladen Đorđević i Marija Bošković.	          		
+					          		<p style="font-size:calc(12px + 0.3vw);">Danas je u Skupštini grada održana prva pres konferencija povodom predstojećeg, 46. FEST-a na kojoj su govorili Ivona Jevtić, Nataša Ilić, Jugoslav Pantelić, Mladen Đorđević i Marija Bošković.	          		
 					          		</p>
 					          		<hr>
-					          		<p>
+					          		<p style="font-size:calc(12px + 0.3vw);">
 									<strong>Ivona Jevtić</strong>, gradski sekretar za kulturu i predsednica Odbora FEST-a, sa zadovoljstvom je izjavila da je grad Beograd za ovogodišnji FEST izdvojio rekordnu sumu novca, čak 30 miliona dinara, što je i očekivano budući da je to jedna od najznačajnijih gradskih manifestacija. Ona je istakla jednu novinu, projekcije u novom bioskopu Cine Grand Rakovica, čime se nastoji da se festival približi publici u svim delovima grada.
 									</p>
-									<p>
+									<p style="font-size:calc(12px + 0.3vw);">
 									<strong>Nataša Ilić</strong>, v.d. direktora CEBEF-a, izjavila je da Centar beogradskih festivala organizuje FEST već četvrtu godinu za redom i da se nada da je poverenje u ovu organizaciju sada već opravdano. Takođe je dodala da je kultura i te kako u žiži interesovanja, što pokazuje i podrška FEST-u od strane kabineta predsednice vlade, gradonačelnika, sekretarijata za kulturu i brojnih javnih preduzeća.
 									</p>
 					        </div>
@@ -192,7 +196,7 @@
 					          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11. maj 2018</small></p>
 					        </div>
 					        <div class="timeline-body">
-					          <p>1. film fest će se održati od 1. juna do 2. juna 2018. godine
+					          <p style="font-size:calc(12px + 0.3vw);">1. film fest će se održati od 1. juna do 2. juna 2018. godine
 					        </div>
 					      </div>
 					    </li>
@@ -239,7 +243,7 @@
 						</a>
 				</div>
 				<div class="col-8" align="right" style="padding:5px">
-					<i>
+					<i class="footer-font-resp">
 						&copy; Copyright 2018.<br>
 						Jakov Jezdic i Marko Hudomal, Odsek za Softversko inzenjerstvo Elektrotehnickog fakulteta univerziteta u Beogradu
 					<i>
