--- a/html/1.4 kontakt.html
+++ b/html/1.4 kontakt.html
@@ -86,14 +86,6 @@
 
 		<div class="container" style="padding-top:20px;">
 			<div class="row">
-				<div class="col-12">
-					<ul class="breadcrumb">
-						<li class="breadcrumb-item"><a class="breadcrumb-link">O festivalu</a></li>
-						<li class="breadcrumb-item active">Kontakt</li>
-					</ul>
-				</div>
-			</div>
-			<div class="row">
 				<div class="col-md-8">					
 					<div id="map"style="width:100%;height:700px;"></div>
 					<script>
@@ -165,7 +157,7 @@
 						</a>
 				</div>
 				<div class="col-8" align="right" style="padding:5px">
-					<i>
+					<i class="footer-font-resp">
 						&copy; Copyright 2018.<br>
 						Jakov Jezdic i Marko Hudomal, Odsek za Softversko inzenjerstvo Elektrotehnickog fakulteta univerziteta u Beogradu
 					<i>
