--- a/html/3.6 glumac.html
+++ b/html/3.6 glumac.html
@@ -153,7 +153,7 @@
 				</div>
 					<div class="col-8">
 						<br>
-						<i>
+						<i class="footer-font-resp">
 							&copy; Copyright 2018.<br>
 							Jakov Jezdic i Marko Hudomal, Odsek za Softversko inzenjerstvo Elektrotehnickog fakulteta univerziteta u Beogradu
 						<i>
