--- a/html/index_eng.html
+++ b/html/index_eng.html
@@ -129,7 +129,7 @@
 				</div>
 					<div class="col-8">
 						<br>
-						<i>
+						<i class="footer-font-resp">
 							&copy; Copyright 2018.<br>
 							Jakov Jezdic i Marko Hudomal, Odsek za Softversko inzenjerstvo Elektrotehnickog fakulteta univerziteta u Beogradu
 						<i>
