Header+navbar sredjen

--- a/html/prodajna_mesta.html
+++ b/html/prodajna_mesta.html
@@ -4,7 +4,7 @@
 		
 		<title>FF - Prodajna mesta</title>
 		<link rel="icon" href="../images/circle-logo.png">
-		
+		<link href="https://fonts.googleapis.com/css?family=Contrail+One|Damion|Dancing+Script|Fredoka+One|Fugaz+One|Kaushan+Script|Monoton|Pacifico|Righteous|Titan+One" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="../css/styles.css" type="text/css">
@@ -29,8 +29,8 @@
 				</div>
 				<div class="col-8 col-lg-10">
 					<br>
-					<h1 style="color:white; ">Filmski festival</h1>
-					<h3 style="color:white; " >1.6-2.6</h3>
+					<p id="glavni_naslov">Filmski &nbsp;&nbsp; &nbsp; festival</p>
+					<p id="glavni_datum" >1.6-2.6</p>
 				</div>
 		</header>		
 				
@@ -50,34 +50,34 @@
 				<div class="collapse navbar-collapse navbar-center" id="collapsibleNavbar">
 					<ul class="navbar-nav mx-auto">
 						<li class="nav-item">
-							<a class="nav-link a-link" href="index.html" ><h3>Početna</h3></a>
+							<a class="nav-link a-link" href="index.html" >Pocetna</a>
 						</li>
 						
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" id="ofestivalu-dd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="ofestivalu.html"><h3>O festivalu</h3></a>
+							<a class="nav-link dropdown-toggle" id="ofestivalu-dd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="ofestivalu.html">O festivalu</a>
 							<div class="dropdown-menu" aria-labelledby="ofestivalu-dd">
-								 <a class="dropdown-item" href="1.1 ziri.html">		<img src="../images/dropdown-icons/jury-icon.png" width="25px">		Ziri</a>
-								 <a class="dropdown-item" href="1.2 nagrade.html">	<img src="../images/dropdown-icons/award-icon.png" width="25px">	Nagrade</a>
-								 <a class="dropdown-item" href="1.3 sponzori.html">	<img src="../images/dropdown-icons/sponsor-icon.png" width="25px">	Sponzori</a>
-								 <a class="dropdown-item" href="1.4 kontakt.html">	<img src="../images/dropdown-icons/contact-icon.png" width="25px">	Kontakt</a>
+								 <a class="dropdown-item" href="1.1 ziri.html">		<img src="../images/dropdown-icons/jury-icon.png" width="25px">&nbsp;		Ziri</a>
+								 <a class="dropdown-item" href="1.2 nagrade.html">	<img src="../images/dropdown-icons/award-icon.png" width="25px">&nbsp;	Nagrade</a>
+								 <a class="dropdown-item" href="1.3 sponzori.html">	<img src="../images/dropdown-icons/sponsor-icon.png" width="25px">&nbsp;	Sponzori</a>
+								 <a class="dropdown-item" href="1.4 kontakt.html">	<img src="../images/dropdown-icons/contact-icon.png" width="25px">&nbsp;	Kontakt</a>
 							</div>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" id="program-dd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="program.html"><h3>Program</h3></a>
+							<a class="nav-link dropdown-toggle" id="program-dd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="program.html">Program</a>
 							<div class="dropdown-menu" aria-labelledby="program-dd">
-								 <a class="dropdown-item" href="2.1 filmovi.html">		<img src="../images/dropdown-icons/film-icon.png" width="25px">Filmovi</a>
-								 <a class="dropdown-item" href="2.2 mesta_projekcija.html">		<img src="../images/dropdown-icons/place-icon.png" width="25px">Mesta projekcija</a>
-								 <a class="dropdown-item selected" href="2.3 prodajna_mesta.html">		<img src="../images/dropdown-icons/ticket-icon.png" width="25px">Prodajna mesta</a>
+								 <a class="dropdown-item" href="2.1 filmovi.html">			<img src="../images/dropdown-icons/film-icon.png" width="25px">&nbsp; Filmovi</a>
+								 <a class="dropdown-item" href="2.2 mesta_projekcija.html">	<img src="../images/dropdown-icons/place-icon.png" width="25px">&nbsp; Mesta projekcija</a>
+								 <a class="dropdown-item" href="2.3 prodajna_mesta.html">	<img src="../images/dropdown-icons/ticket-icon.png" width="25px">&nbsp; Prodajna mesta</a>
 							</div>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="3 glumci.html"><h3>Glumci</h3></a>
+							<a class="nav-link" href="3 glumci.html">Glumci</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="4 vesti.html"><h3>Vesti</h3></a>
+							<a class="nav-link" href="4 vesti.html">Vesti</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="5 mojifilmovi.html"><h3>Moji filmovi</h3></a>
+							<a class="nav-link" href="5 mojifilmovi.html">Moji filmovi</a>
 						</li>
 					</ul>
 				</div> 
