--- a/html/5 mojifilmovi.html
+++ b/html/5 mojifilmovi.html
@@ -77,7 +77,7 @@
 						<li class="nav-item">
 							<a class="nav-link" href="4 vesti.html">Vesti</a>
 						</li>
-						<li class="nav-item">
+						<li class="nav-item active">
 							<a class="nav-link" href="5 mojifilmovi.html">Moji filmovi</a>
 						</li>
 					</ul>
