--- a/html/2.1 filmovi.html
+++ b/html/2.1 filmovi.html
@@ -66,7 +66,7 @@
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" id="program-dd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="program.html">Program</a>
 							<div class="dropdown-menu" aria-labelledby="program-dd">
-								 <a class="dropdown-item" href="2.1 filmovi.html">			<img src="../images/dropdown-icons/film-icon.png" width="25px">&nbsp; Filmovi</a>
+								 <a class="dropdown-item selected" href="2.1 filmovi.html">			<img src="../images/dropdown-icons/film-icon.png" width="25px">&nbsp; Filmovi</a>
 								 <a class="dropdown-item" href="2.2 mesta_projekcija.html">	<img src="../images/dropdown-icons/place-icon.png" width="25px">&nbsp; Mesta projekcija</a>
 								 <a class="dropdown-item" href="2.3 prodajna_mesta.html">	<img src="../images/dropdown-icons/ticket-icon.png" width="25px">&nbsp; Prodajna mesta</a>
 							</div>
