--- a/html/1.2 nagrade.html
+++ b/html/1.2 nagrade.html
@@ -57,7 +57,7 @@
 							<a class="nav-link dropdown-toggle" id="ofestivalu-dd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="ofestivalu.html">O festivalu</a>
 							<div class="dropdown-menu" aria-labelledby="ofestivalu-dd">
 								 <a class="dropdown-item" href="1.1 ziri.html">		<img src="../images/dropdown-icons/jury-icon.png" width="25px">&nbsp;		Ziri</a>
-								 <a class="dropdown-item" href="1.2 nagrade.html">	<img src="../images/dropdown-icons/award-icon.png" width="25px">&nbsp;	Nagrade</a>
+								 <a class="dropdown-item selected" href="1.2 nagrade.html">	<img src="../images/dropdown-icons/award-icon.png" width="25px">&nbsp;	Nagrade</a>
 								 <a class="dropdown-item" href="1.3 sponzori.html">	<img src="../images/dropdown-icons/sponsor-icon.png" width="25px">&nbsp;	Sponzori</a>
 								 <a class="dropdown-item" href="1.4 kontakt.html">	<img src="../images/dropdown-icons/contact-icon.png" width="25px">&nbsp;	Kontakt</a>
 							</div>
