--- a/html/1.4 kontakt.html
+++ b/html/1.4 kontakt.html
@@ -59,7 +59,7 @@
 								 <a class="dropdown-item" href="1.1 ziri.html">		<img src="../images/dropdown-icons/jury-icon.png" width="25px">&nbsp;		Ziri</a>
 								 <a class="dropdown-item" href="1.2 nagrade.html">	<img src="../images/dropdown-icons/award-icon.png" width="25px">&nbsp;	Nagrade</a>
 								 <a class="dropdown-item" href="1.3 sponzori.html">	<img src="../images/dropdown-icons/sponsor-icon.png" width="25px">&nbsp;	Sponzori</a>
-								 <a class="dropdown-item" href="1.4 kontakt.html">	<img src="../images/dropdown-icons/contact-icon.png" width="25px">&nbsp;	Kontakt</a>
+								 <a class="dropdown-item selected" href="1.4 kontakt.html">	<img src="../images/dropdown-icons/contact-icon.png" width="25px">&nbsp;	Kontakt</a>
 							</div>
 						</li>
 						<li class="nav-item dropdown">
