--- a/html/1.4 kontakt.html
+++ b/html/1.4 kontakt.html
@@ -53,7 +53,7 @@
 							<a class="nav-link a-link" href="index.html" >Pocetna</a>
 						</li>
 						
-						<li class="nav-item dropdown">
+						<li class="nav-item dropdown active">
 							<a class="nav-link dropdown-toggle" id="ofestivalu-dd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="ofestivalu.html">O festivalu</a>
 							<div class="dropdown-menu" aria-labelledby="ofestivalu-dd">
 								 <a class="dropdown-item" href="1.1 ziri.html">		<img src="../images/dropdown-icons/jury-icon.png" width="25px">&nbsp;		Ziri</a>
