--- a/html/2.2 mesta_projekcija.html
+++ b/html/2.2 mesta_projekcija.html
@@ -62,7 +62,7 @@
 								 <a class="dropdown-item" href="1.4 kontakt.html">	<img src="../images/dropdown-icons/contact-icon.png" width="25px">&nbsp;	Kontakt</a>
 							</div>
 						</li>
-						<li class="nav-item dropdown">
+						<li class="nav-item dropdown active">
 							<a class="nav-link dropdown-toggle" id="program-dd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="program.html">Program</a>
 							<div class="dropdown-menu" aria-labelledby="program-dd">
 								 <a class="dropdown-item" href="2.1 filmovi.html">			<img src="../images/dropdown-icons/film-icon.png" width="25px">&nbsp; Filmovi</a>
