Manja izmena: pocetni tekst i jedan link sporedni popravljen koji vodi ka filmu

--- a/html/2.1 filmovi.html
+++ b/html/2.1 filmovi.html
@@ -139,7 +139,7 @@
 				        <div class="data">
 				          <div class="content">
 				            <span class="author">Martin McDonagh</span>
-				            <h1 class="title"><a href="2.1.2 film">Tri Bilborda ispred Ebinga u Misuriju</a></h1>
+				            <h1 class="title"><a href="2.1.2 film.html">Tri Bilborda ispred Ebinga u Misuriju</a></h1>
 				            <p class="text"> <strong> Uloge:</strong> Frances McDormand, Woody Harrelson, Sam Rockwell, Peter Dinklage</p>
 				            <a href="2.1.2 film.html" class="button">Prikaži više</a>
 				          </div>
