--- a/html/index.html
+++ b/html/index.html
@@ -97,7 +97,7 @@
 					<div class="jumbotron" style="background-size:cover;background-image: url('../images/naslovna.jpg'); padding-top: 180px">
 						<div class="jumbotron" style="padding-top: 5%" >
 							<h1>Dobrodosli na zvaničan sajt film fest-a</h1><br>
-							<p>Prvi film-fest, otvoren je 9. januara 1971. u Domu Sindikata, projekcijom filma "Mes" Roberta Altmana. Zamišljen kao godisnji presek najboljih filmova sezone, filmski festival <i>film fest</i> izrastao je u jednu od najznacajnijih filmskih smotri i postao jedan od glavnih dogadjaja, uz koga su odrasle mnoge mlade generacije.
+							<p>Prvi film-fest, bice otvoren 1. juna 2018. u Domu Sindikata, projekcijom filma "Advokat" Dana Gilroy-a. Zamišljen kao godisnji presek najboljih filmova sezone, verujemo da ce filmski festival <i>film fest</i> izrasti u jednu od najznacajnijih filmskih smotri i postati jedan od glavnih dogadjaja, uz koga ce odrasti mnoge nove mlade generacije.
 							</p>
 							<hr>
 							<p>Na ovom sajtu mozete pronaci sve informacije vezane za sam festival, ziri, nagradama, sponzorima, kontaktu, glumcima, filmovima..
