Rezervacije gotove, pogledaj pdf

--- a/html/2.1 filmovi.html
+++ b/html/2.1 filmovi.html
@@ -4,6 +4,10 @@
 		
 		<title>FF - Filmovi</title>
 		<link rel="icon" href="../images/circle-logo.png">
+
+		
+		<script src="../js/main.js"></script>
+
 		<link href="https://fonts.googleapis.com/css?family=Contrail+One|Damion|Dancing+Script|Fredoka+One|Fugaz+One|Kaushan+Script|Monoton|Pacifico|Righteous|Titan+One" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -11,9 +15,10 @@
 		<link rel="stylesheet" href="../css/styles.css" type="text/css">
 		<link rel="stylesheet" href="../css/cards-style.css" type="text/css">
 
+
 	</head>
 	
-	<body onLoad="prikaziFilmove();">
+	<body onLoad="refreshRezervacije()">
 		
 		<!--Uniform----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 		<!--Header-->
@@ -110,7 +115,7 @@
 				            <span style="color:white">Trajanje: 142’ </span>
 				          </div>
 				          <ul class="menu-content">
-				            <li><a href="#" class="fa fa-bookmark-o"><span id="film_rez_1">2</span></a></li>
+				            <li><a href="2.1.1 film.html#rezervisi"class="fa fa-bookmark-o"><span id="film_rez_1">x</span></a></li>
 				          </ul>
 				        </div>
 				        <div class="data">
@@ -133,7 +138,7 @@
 				            <span style="color:white">Trajanje: 115’ </span>
 				          </div>
 				          <ul class="menu-content">
-				            <li><a href="#" class="fa fa-bookmark-o"><span id="film_rez_2">2</span></a></li>
+				            <li><a href="2.1.2 film.html#rezervisi"class="fa fa-bookmark-o"><span id="film_rez_2">x</span></a></li>
 				          </ul>
 				        </div>
 				        <div class="data">
@@ -156,7 +161,7 @@
 				            <span>Trajanje: 107’ </span>
 				           </div>
 				          <ul class="menu-content">
-				            <li><p href="#" class="fa fa-bookmark-o"><span id="film_rez_3">2</span></p></li>
+				            <li><a href="2.1.3 film.html#rezervisi"class="fa fa-bookmark-o"><span id="film_rez_3">x</span></a></li>
 				          </ul>
 				        </div>
 				        <div class="data">
@@ -179,7 +184,7 @@
 				            <span>Trajanje: 104’ </span>
 				          </div>
 				          <ul class="menu-content">
-				            <li><p href="#" class="fa fa-bookmark-o"><span id="film_rez_4">2</span></p></li>
+				            <li><a href="2.1.4 film.html#rezervisi"class="fa fa-bookmark-o"><span id="film_rez_4">x</span></a></li>
 				          </ul>
 				        </div>
 				        <div class="data">
@@ -202,7 +207,7 @@
 				            <span style="color:white">Trajanje: 123’ </span>
 				          </div>
 				          <ul class="menu-content">
-				            <li><p href="#" class="fa fa-bookmark-o"><span id="film_rez_5">2</span></p></li>
+				            <li><a href="2.1.5 film.html#rezervisi"class="fa fa-bookmark-o"><span id="film_rez_5">x</span></a></li>
 				          </ul>
 				        </div>
 				        <div class="data">
@@ -225,7 +230,7 @@
 				            <span style="color:white">Trajanje: 115’ </span>
 				          </div>
 				          <ul class="menu-content">
-				            <li><p href="#" class="fa fa-bookmark-o"><span id="film_rez_6">2</span></p></li>
+				            <li><a href="2.1.6 film.html#rezervisi"class="fa fa-bookmark-o"><span id="film_rez_6">x</span></a></li>
 				          </ul>
 				        </div>
 				        <div class="data">
